--- a/src/sections/home/Hero/Hero.css
+++ b/src/sections/home/Hero/Hero.css
@@ -4,7 +4,7 @@
 
   min-height: 92vh;
   padding: 98px 0 42px;
-  margin-top: 70px;
+  margin-top: 82px;
 
   display: flex;
   align-items: center;
